Remove deprecated URL API for Java 21 preparation